--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <body>
         <section class="banner">
-            <img src="/img/bg.png" alt="background">
+            <img src="img/bg.png" alt="background">
             <header>
                 <h1>Cheers!<br><span>I'm Hafi.</span></h1>
             </header>
         </section>
 
         <section class="fp">
-            <img src="/img/fp.png" alt="fp">
+            <img src="img/fp.png" alt="fp">
         </section>
             
         <nav class="mainnav">
