--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </p>
             <p>
                 &nbsp;&nbsp;&nbsp;&nbsp; As you may know (or not), 
-                this website hasn't been that responsive. Zooming in or out is not a recommendation. 
-                Just.. don't.., please?</p>
+                this website hasn't been that responsive. The mobile view is such a mess. Zooming in or out is not a recommendation. 
+                Just.. don't zoom.. , please?</p>
         </section>
 
         <section id="reason" class="reason content">
